objects/amc__Milestone__c.object
<CustomObject>
    <fields>
        <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
        <formula>amc__Hours_Completed_Non_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected number of non billable hours on all Actions within this Milestone. Formula: Hours Completed - Non Billable + Projected Hours Remaining - Non Billable</inlineHelpText>
        <label>Projected Total Hours - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours__c</fullName>
        <formula>amc__Total_Hours_Completed__c + amc__Total_Projected_Hours_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected hours on all Actions within this Milestone. Formula: Total Hours Completed + Total Projected Hours Remaining</inlineHelpText>
        <label>Projected Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Recurrences_Remaining__c</fullName>
        <inlineHelpText>Identifies how many more recurrences are remaining</inlineHelpText>
        <label>Recurrences Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Recurring_Frequency__c</fullName>
        <inlineHelpText>Identifies the frequency of the recurring schedule for this Action</inlineHelpText>
        <label>Recurring Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Requirement record that this Milestone was created from</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>amc__Requirement__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <label>Start Date</label>
        <summarizedField>amc__Action__c.amc__Start_Date__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Tax_Rate__c</fullName>
        <description>Used in Apex Trigger logic only</description>
        <formula>amc__Project__r.amc__Tax_Label__r.amc__Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Total_Actions__c</fullName>
        <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Milestone excluding where the Action Status = Cancelled</inlineHelpText>
        <label>Total Actions</label>
        <summaryFilterItems>
            <field>amc__Action__c.amc__Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours completed, billable and non billable</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Remaining__c</fullName>
        <formula>amc__Hours_Remaining__c + amc__Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours remaining, billable and non billable</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Scheduled__c</fullName>
        <formula>amc__Hours_Scheduled__c + amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours scheduled, billable and non billable</inlineHelpText>
        <label>Total Hours Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Projected_Hours_Remaining__c</fullName>
        <formula>amc__Projected_Hours_Remaining_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected number of hours remaining on all Actions within this Milestone</inlineHelpText>
        <label>Total Projected Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Unallocated_Milestone_Budget__c</fullName>
        <formula>amc__Milestone_Budget__c -  amc__Hours_Scheduled_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies how much of the Milestone Budget has not yet been allocated to an Action. Formula: Milestone Budget - Hours Scheduled Value (Billable)</inlineHelpText>
        <label>Unallocated Milestone Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>amc__Recurring_Validation_Frequency</fullName>
        <active>true</active>
        <description>If Milestone ‘Is Recurring’ = TRUE ensure ‘Number of Recurrences’ and ‘Recurring Frequency’ = TRUE</description>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(TEXT(amc__Recurring_Frequency__c)))</errorConditionFormula>
        <errorDisplayField>amc__Recurring_Frequency__c</errorDisplayField>
        <errorMessage>You must set the Recurring Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Recurring_Validation_Number</fullName>
        <active>true</active>
        <description>If Milestone ‘Is Recurring’ = TRUE ensure ‘Number of Recurrences’ and ‘Recurring Frequency’ = TRUE</description>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(amc__Number_of_Recurrences__c))</errorConditionFormula>
        <errorDisplayField>amc__Number_of_Recurrences__c</errorDisplayField>
        <errorMessage>You must set the Number of Recurrences</errorMessage>
    </validationRules>
</CustomObject>